Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -61,7 +61,7 @@
       "type": "series",
       "name": "I've Been Killing Slimes For 300 Years And Maxed Out My Level Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-2uPE0ywVcz9X.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons/Found Family/Medieval\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Found Family/Dragons/Medieval\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
     },
     {
       "id": "tt35436364",
@@ -292,7 +292,7 @@
       "type": "series",
       "name": "Food for the Soul",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-hqt1He153el8.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Cute Girls Doing Cute Things/Primarily Adult Cast/College/Iyashikei/Food/Female Protagonist/Primarily Female Cast/School Club\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
+      "description": "Genres: Comedy, Slice of Life\nTags:School Club/Cute Girls Doing Cute Things/Primarily Adult Cast/Iyashikei/College/Food/Female Protagonist/Primarily Female Cast\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
       "id": "tt35508195",
