--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "KONOSUBA -God's Blessing on This Wonderful World! 3 -BONUS STAGE-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181244-ICHU0FzIhEAY.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Ensemble Cast/Chuunibyou/Primarily Female Cast/Medieval/Isekai/Gods/Male Protagonist\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Red Stream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Watch Out For Impostors!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Chuunibyou/Isekai/Gods/Primarily Female Cast/Ensemble Cast/Medieval/Male Protagonist/Slapstick\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Red Stream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Watch Out For Impostors!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
     },
     {
       "id": "tt35331428",
@@ -138,7 +138,7 @@
       "type": "series",
       "name": "Rock is a Lady’s Modesty",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-7zhc0T6IImor.jpg",
-      "description": "Genres: Drama, Music\nTags:Ojou-sama/Female Protagonist/Band/Rock Music/School/Bullying/Yuri/Seinen/Urban/LGBTQ+ Themes/Primarily Female Cast/CGI/Primarily Teen Cast\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Music\nTags:Ojou-sama/Female Protagonist/Band/Rock Music/School/Bullying/Yuri/Seinen/Urban/Primarily Female Cast/CGI/LGBTQ+ Themes/Primarily Teen Cast\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt16741414",
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "A Ninja and an Assassin Under One Roof",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177120-xRucIg2WDr77.png",
-      "description": "Genres: Comedy\nTags:Female Protagonist/Urban/Slapstick/Primarily Female Cast/Ninja/Assassins/Cute Girls Doing Cute Things/Surreal Comedy/Fugitive/Yuri/Yandere/LGBTQ+ Themes/School/Shounen\nOn the way home from school one day, Konoha Koga rescues Satoko Kusagakure, a ninja who escaped her village. Soon, pursuers from the village show up in search of Satoko only to be deftly dealt with by Konoha. As it turns out, the unassuming high schooler is actually an assassin. Thus, the potentially cutthroat cohabitation of a ninja and an assassin begins!\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy\nTags:Female Protagonist/Urban/Slapstick/Primarily Female Cast/Ninja/Assassins/Cute Girls Doing Cute Things/Surreal Comedy/Fugitive/Robots/Yuri/Yandere/Artificial Intelligence/LGBTQ+ Themes/School/Shounen\nOn the way home from school one day, Konoha Koga rescues Satoko Kusagakure, a ninja who escaped her village. Soon, pursuers from the village show up in search of Satoko only to be deftly dealt with by Konoha. As it turns out, the unassuming high schooler is actually an assassin. Thus, the potentially cutthroat cohabitation of a ninja and an assassin begins!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt30844357",
@@ -236,7 +236,7 @@
       "type": "series",
       "name": "mono",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176246-ndH8bKh7cmzf.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Photography/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Teen Cast/School/Iyashikei/Primarily Female Cast/Animals/Urban/Drawing/Food/Meta/Motorcycles\nSatsuki Amamiya was feeling down due to the graduation of the high school Photography Club’s president. However, her best friend and fellow member An Kiriyama encourages Satsuki to dedicate herself to the newly merged Cinephoto Club. Join Satsuki and An as they set out to track down a missing camera, meet new faces, and capture stunning photos and videos along the way. <br><br> (Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Photography/Cute Girls Doing Cute Things/School Club/Female Protagonist/Primarily Teen Cast/Iyashikei/School/Primarily Female Cast/Animals/Urban/Drawing/Food/Meta/Motorcycles\nSatsuki Amamiya was feeling down due to the graduation of the high school Photography Club’s president. However, her best friend and fellow member An Kiriyama encourages Satsuki to dedicate herself to the newly merged Cinephoto Club. Join Satsuki and An as they set out to track down a missing camera, meet new faces, and capture stunning photos and videos along the way. <br><br> (Source: Crunchyroll)"
     },
     {
       "id": "tt34702901",
@@ -344,11 +344,11 @@
       "description": "Genres: Comedy, Mystery, Sci-Fi, Slice of Life\nTags:Educational/Aliens/Animals/Seinen/Female Protagonist/College\nA cat-like alien from a distant galaxy, MuMu, arrives on Earth. His goal is to learn about home appliance technology on Earth to recover the technology his species has lost. The protagonist, Sakurako, has a typical university life, but everything changes with MuMu's arrival! What begins as an unexpected cohabitation quickly turns into a whirlwind of chaotic events. The chemistry between Sakurako and MuMu leads to a super-spectacular, appliance-filled, and cat comedy adventure.\n<br><br>\n(Source: Pony Canyon)"
     },
     {
-      "id": "tt36600601",
+      "id": "tt34853325",
       "type": "series",
-      "name": "Koisuru ONE PIECE",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188668-rOB7rkgOz89w.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Meta/Primarily Teen Cast/School Club/Vertical Video\nThe premise of this spinoff is about three high school students: a young male student, his girlfriend and a third wheel who is a One Piece fanatic. Their names are similar to the Straw Hat Pirates and the group form a fan club dedicated to One Piece.\n<br><Br>\n(Source: One Piece Wiki)"
+      "name": "Princess-Session Orchestra",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-igWygf0ZG1gl.jpg",
+      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist/Dancing/Kids/Tomboy/Super Power/Fairy/Idol/Urban/Urban Fantasy/Primarily Female Cast/School/Isekai/Superhero/Cute Girls Doing Cute Things\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
     }
   ]
 }
