Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -99,6 +99,16 @@
         "defaultVideoId": "tt36851989"
       },
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nDream Animals biscuits, a long-selling snack beloved by Japanese since its launch in 1978 has been sold in more than 20 countries around the world and features the animal names written in English on the biscuits. The product has enjoyed an explosion in popularity in recent years as merchandise, especially among young people. Now for the first time, the product is given treatment as an animated movie called Dream Animals: The Movie. How will these animal biscuit characters behave and sound as they embark upon a thrilling adventure while tugging at your heartstrings with endearingly rich personalities.\n<br><br>\n(Source: TBS)"
+    },
+    {
+      "id": "tt29054552",
+      "type": "movie",
+      "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192809-wRlqABGsx2Qs.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt29054552"
+      },
+      "description": "Genres: Action, Drama, Supernatural\nTags:Shounen\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
     }
   ]
 }
