--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -44,11 +44,11 @@
       "id": "tt35652362",
       "type": "movie",
       "name": "Kaitou Queen no Yuuga na Vacances",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162682-rnE3R6x3I4KY.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162682-HxgVCRRBRykN.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt35652362"
       },
-      "description": "Genres: Mystery\nTags:\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
+      "description": "Genres: Mystery\nTags:Crime/Detective\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt36583287",
@@ -58,7 +58,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36583287"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Robots/Maids/Shounen\nTheatrical follow-up to <i>Boku to Roboco</i>."
+      "description": "Genres: Comedy, Slice of Life\nTags:Shounen/Robots/Maids\nTheatrical follow-up to <i>Boku to Roboco</i>."
     },
     {
       "id": "tt35652414",
@@ -74,21 +74,21 @@
       "id": "tt28664733",
       "type": "movie",
       "name": "Lost in Starlight",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b192002-3QLggjTtpSPy.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192002-sZCUa2OSDhZi.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt28664733"
       },
-      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Space Opera/Heterosexual\nWhen an astronaut leaves Earth for Mars, the vast infinite space divides star-crossed lovers in this animated romance that crosses the cosmos.<br><br>\n\n(Source: Netflix)"
+      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
     },
     {
-      "id": "tt29054552",
+      "id": "tt36956670",
       "type": "movie",
       "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192809-wRlqABGsx2Qs.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt29054552"
+        "defaultVideoId": "tt36956670"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Shounen/Curses\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
+      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Shounen\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
     },
     {
       "id": "tt36551651",
