Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -40,7 +40,7 @@
       "type": "series",
       "name": "From Old Country Bumpkin to Master Swordsman",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179955-e4UPTow92B1O.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Medieval/Seinen/Female Harem/Swordplay/Teacher/Magic/Male Protagonist/Coming of Age/CGI/Family Life\nBeryl Gardinant, a self-proclaimed “humble old man,” is a sword instructor at his dojo in a rural, backwater village. In his younger years, he dreamed of glory as a master swordsman, but those days are long behind him. Out of the blue, he receives a visit from a famous former pupil who brings him world-shattering news—he's been appointed as special instructor for the knights of the Liberion Order! With his life now turned upside down, Beryl travels to the capital and reunites with some of his former students: elite knights, an ace wizard, and even an adventurer who's attained the highest guild rank possible. But why do they all want his tutelage?! As far as he's concerned, they clearly don't need him anymore.\n<br><br>\nCan Beryl live up to his new position? And will he ever get a moment's peace away from his adoring students?!\n<br><br>\n(Source: J-Novel Club)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Medieval/Female Harem/Seinen/Swordplay/Teacher/Magic/Male Protagonist/Coming of Age/CGI/Family Life\nBeryl Gardinant, a self-proclaimed “humble old man,” is a sword instructor at his dojo in a rural, backwater village. In his younger years, he dreamed of glory as a master swordsman, but those days are long behind him. Out of the blue, he receives a visit from a famous former pupil who brings him world-shattering news—he's been appointed as special instructor for the knights of the Liberion Order! With his life now turned upside down, Beryl travels to the capital and reunites with some of his former students: elite knights, an ace wizard, and even an adventurer who's attained the highest guild rank possible. But why do they all want his tutelage?! As far as he's concerned, they clearly don't need him anymore.\n<br><br>\nCan Beryl live up to his new position? And will he ever get a moment's peace away from his adoring students?!\n<br><br>\n(Source: J-Novel Club)"
     },
     {
       "id": "tt33999377",
@@ -64,18 +64,18 @@
       "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Femdom/Heterosexual/Nudity/Slavery/Large Breasts/Tsundere/Bullying/Female Protagonist/Male Protagonist/Shounen/School\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
     },
     {
-      "id": "tt13248062",
-      "type": "series",
-      "name": "I've Been Killing Slimes For 300 Years And Maxed Out My Level Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-2uPE0ywVcz9X.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Found Family/Dragons/Medieval\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
-    },
-    {
       "id": "tt35346400",
       "type": "series",
       "name": "Can a Boy-Girl Friendship Survive?",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153554-hHYe9aV6Gvlv.jpg",
       "description": "Genres: Comedy, Romance\nTags:Love Triangle/Heterosexual/School/Female Protagonist/Male Protagonist/CGI/Horticulture/Primarily Teen Cast/Fashion/Chibi\nChildhood BFFs Himari and Yuu’s vow of friendship hits turbulence when Yuu reunites with his first crush in high school. Himari, who’s never known the fuzzy warmth of a crush, now must confront her feelings. Their shared dreams and peaceful days as a twosome gardening club are tested in this tale of love, flowers, and growing pains!<br><br>\n(Source: Crunchyroll, edited)"
+    },
+    {
+      "id": "tt13248062",
+      "type": "series",
+      "name": "I've Been Killing Slimes For 300 Years And Maxed Out My Level Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-2uPE0ywVcz9X.jpg",
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Found Family/Dragons/Medieval\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
     },
     {
       "id": "tt32281073",
@@ -145,7 +145,7 @@
       "type": "series",
       "name": "Summer Pockets",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143200-42OaDCS6VEy3.png",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Male Protagonist/Rural/Coastal/Coming of Age/Heterosexual/Shrine Maiden/Swimming/Kuudere/Fishing/Tsundere/Table Tennis/Food\nTakahara Hairi never expected summer to feel like a dream. Sent to Torishirojima Island to sort through his late grandmother’s belongings, he’s met with endless sea, quiet nostalgia, and mysterious girls, each chasing something just out of reach. As he settles into island life, lost memories begin to surface and he finds what he never knew he’d lost.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Rural/Male Protagonist/Coastal/Coming of Age/Heterosexual/Shrine Maiden/Swimming/Kuudere/Fishing/Tsundere/Table Tennis/Food\nTakahara Hairi never expected summer to feel like a dream. Sent to Torishirojima Island to sort through his late grandmother’s belongings, he’s met with endless sea, quiet nostalgia, and mysterious girls, each chasing something just out of reach. As he settles into island life, lost memories begin to surface and he finds what he never knew he’d lost.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt34814625",
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Moonrise",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-pgima1BrY7N0.jpg",
-      "description": "Genres: Action, Fantasy, Sci-Fi\nTags:Space/Dystopian/Urban Fantasy/Orphan/Male Protagonist/Artificial Intelligence/Robots/CGI/War/Military/Guns/Love Triangle/Shounen\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
+      "description": "Genres: Action, Fantasy, Sci-Fi\nTags:Space/Dystopian/Urban Fantasy/Orphan/Male Protagonist/Artificial Intelligence/Robots/CGI/War/Military/Guns/Shounen/Love Triangle\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
     },
     {
       "id": "tt35437763",
@@ -204,18 +204,18 @@
       "description": "Genres: Comedy\nTags:Female Protagonist/Urban/Primarily Female Cast/Ninja/Assassins/Slapstick/Cute Girls Doing Cute Things/Surreal Comedy/Yuri/Fugitive/LGBTQ+ Themes/Yandere/Robots/Shounen/Artificial Intelligence/School\nOn the way home from school one day, Konoha Koga rescues Satoko Kusagakure, a ninja who escaped her village. Soon, pursuers from the village show up in search of Satoko only to be deftly dealt with by Konoha. As it turns out, the unassuming high schooler is actually an assassin. Thus, the potentially cutthroat cohabitation of a ninja and an assassin begins!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32513973",
-      "type": "series",
-      "name": "YOUR FORMA",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167142-dJwdHptpILkF.jpg",
-      "description": "Genres: Action, Drama, Mystery, Sci-Fi\nTags:Detective/Female Protagonist/Cyberpunk/Crime/Male Protagonist/Robots\nIn 1992, a pandemic of viral encephalitis shook the world. The medical technology that saved humanity evolved into <i>“Your Forma”</i>—an invasive information device implanted into the brain. In this world where every sight, sound, and even emotion is recorded, investigating major crimes means diving into the collective data, a job reserved for special detectives called “Electronic Investigator.”\n<br><br>\nEchika Hieda, a prodigious “Electronic Investigator” assigned at an astonishingly young age, stands isolated by her exceptional talent. Her newly assigned partner is Harold, a blonde, blue-eyed humanoid “Amicus.” Together, this unrivaled duo will expose every hidden secret.\n<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
-    },
-    {
       "id": "tt33332400",
       "type": "series",
       "name": "YAIBA: Samurai Legend",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177476-kduwwEfxcZtU.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Shounen/Samurai/Swordplay/Animals\nThe protagonist, Yaiba (Kurogane Yaiba), is a wild samurai boy who trains in the jungle with his father, Kenjuro! By chance, Yaiba returns to Japan, where he meets his rival Takeshi Onimaru, who has the same samurai spirit as Yaiba, in a new training ground.\n<br><br>\nYaiba is living a life of serious competition, but when Onimaru obtains the “Legendary Demon Sword”, he is on a journey full of spectacle and great adventure...!<br><br>\n\n(Source: Crunchyroll News)"
+    },
+    {
+      "id": "tt32513973",
+      "type": "series",
+      "name": "YOUR FORMA",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167142-dJwdHptpILkF.jpg",
+      "description": "Genres: Action, Drama, Mystery, Sci-Fi\nTags:Detective/Female Protagonist/Cyberpunk/Crime/Male Protagonist/Robots\nIn 1992, a pandemic of viral encephalitis shook the world. The medical technology that saved humanity evolved into <i>“Your Forma”</i>—an invasive information device implanted into the brain. In this world where every sight, sound, and even emotion is recorded, investigating major crimes means diving into the collective data, a job reserved for special detectives called “Electronic Investigator.”\n<br><br>\nEchika Hieda, a prodigious “Electronic Investigator” assigned at an astonishingly young age, stands isolated by her exceptional talent. Her newly assigned partner is Harold, a blonde, blue-eyed humanoid “Amicus.” Together, this unrivaled duo will expose every hidden secret.\n<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
     },
     {
       "id": "tt35436997",
@@ -348,7 +348,7 @@
       "type": "series",
       "name": "Princess-Session Orchestra",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-igWygf0ZG1gl.jpg",
-      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Tomboy/Super Power/Female Protagonist/Dancing/Kids/Fairy/Idol/Urban/Urban Fantasy/Primarily Female Cast/School/Isekai/Superhero/Cute Girls Doing Cute Things\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
+      "description": "Genres: Action, Mahou Shoujo, Music\nTags:Henshin/Magic/Tomboy/Super Power/Female Protagonist/Dancing/Kids/Fairy/Idol/Urban/Urban Fantasy/Primarily Female Cast/School/Isekai/Superhero/Cute Girls Doing Cute Things\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
     }
   ]
 }
