Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36592985"
       },
-      "description": "Genres: Fantasy, Slice of Life\nTags:Dragons/Seinen/Found Family/Maids/Female Protagonist\n<i>\"I don’t want to let go of her hand. Because, we are a family.\"</i>\n<br><br>\nTheatrical follow-up to the second season <i>Kobayashi-san Chi no Maidragon S</i> and <i>Kobayashi-san Chi no Maidragon S: Nippon no Omotenashi (Attend wa Dragon desu)</i> OVA.<br><br>\n\n(Source: Kyoto Animation YouTube Channel)"
+      "description": "Genres: Fantasy, Slice of Life\nTags:Dragons/Seinen/Maids/Found Family/Female Protagonist\n<i>\"I don’t want to let go of her hand. Because, we are a family.\"</i>\n<br><br>\nTheatrical follow-up to the second season <i>Kobayashi-san Chi no Maidragon S</i> and <i>Kobayashi-san Chi no Maidragon S: Nippon no Omotenashi (Attend wa Dragon desu)</i> OVA.<br><br>\n\n(Source: Kyoto Animation YouTube Channel)"
     },
     {
       "id": "tt35720302",
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35720302"
       },
-      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Primarily Female Cast/Politics/Espionage/Steampunk/Female Protagonist/Primarily Teen Cast\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
+      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Primarily Teen Cast/Primarily Female Cast/Politics/Espionage/Steampunk/Female Protagonist\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
     },
     {
       "id": "tt34812090",
@@ -41,6 +41,16 @@
       "description": "Genres: Mystery\nTags:Crime/Detective/Male Protagonist\nThe 28th <i>Detective Conan</i> movie."
     },
     {
+      "id": "tt36956670",
+      "type": "movie",
+      "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192809-wRlqABGsx2Qs.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt36956670"
+      },
+      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Shounen/Boys' Love\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
+    },
+    {
       "id": "tt35652362",
       "type": "movie",
       "name": "Kaitou Queen no Yuuga na Vacances",
@@ -61,16 +71,6 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Shounen/Robots/Maids\nTheatrical follow-up to <i>Boku to Roboco</i>."
     },
     {
-      "id": "tt36956670",
-      "type": "movie",
-      "name": "JUJUTSU KAISEN: Hidden Inventory / Premature Death – The Movie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx192809-wRlqABGsx2Qs.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt36956670"
-      },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Curses/Shounen/Boys' Love\n<i>\"The strongest duo—A youth they can never return to.\"</i><br><br>\n\nCompilation film of <i>Jujutsu Kaisen 2nd Season's</i> \"Kaigyoku・Gyokusetsu\" (Hidden Inventory / Premature Death) arc.\n\n<br><br>\nBefore they were enemies, Satoru Gojo and Suguru Geto were high school classmates and friends. The two most powerful sorcerers are tasked with protecting Riko Amanai, a student who has been designated to be sacrificed as the Star Plasma Vessel, until she can fulfill her duty. Pursued by a religious cult and other curse users, they are the only sorcerers capable of carrying out such a difficult task – but this mission will set their destinies, and challenge the two sorcerers in ways unimaginable.<br><br>\n\n(Source: GKIDS)"
-    },
-    {
       "id": "tt35652414",
       "type": "movie",
       "name": "Uta no☆Prince-sama♪ TABOO NIGHT XXXX",
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt28664733"
       },
-      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Space Opera/Heterosexual\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
+      "description": "Genres: Drama, Romance, Sci-Fi\nTags:Heterosexual/Space Opera\nIn 2050 Seoul, astronaut Nan-young’s ultimate goal is to visit Mars. But she fails the final test to onboard the fourth Mars Expedition Project. The musician Jay buries his dreams in a vintage audio equipment shop.\nThe two fall in love after a chance encounter. As they root for each other and dream of a new future. Nan-young is given another chance to fly to Mars, which is all she ever wanted…<br><br>\n\n(Source: Netflix)"
     },
     {
       "id": "tt36551651",
