--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -54,14 +54,14 @@
       "type": "series",
       "name": "My Hero Academia: Vigilantes",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185736-Ci6AiGwjKKtp.jpg",
-      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Urban/Super Power/Superhero/Fugitive/Crime/Idol/Male Protagonist/Shounen\nKouichi Haimawari is a dull college student who aspires to be a hero but has given up on his dream. Although 80% of the world’s population has superhuman powers called Quirks, few are chosen to become heroes and protect people. Everything changes for Kouichi when he and Pop☆Step are saved by the vigilante Knuckleduster and get recruited to become vigilantes themselves!\n<br><br>\n(Source: Crunchyroll) "
+      "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Urban/Super Power/Superhero/Fugitive/Crime/Idol/Male Protagonist/Shounen/Urban Fantasy\nKouichi Haimawari is a dull college student who aspires to be a hero but has given up on his dream. Although 80% of the world’s population has superhuman powers called Quirks, few are chosen to become heroes and protect people. Everything changes for Kouichi when he and Pop☆Step are saved by the vigilante Knuckleduster and get recruited to become vigilantes themselves!\n<br><br>\n(Source: Crunchyroll) "
     },
     {
       "id": "tt35436364",
       "type": "series",
       "name": "Please Put Them On, Takamine-san",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179965-EwqzG3xSyxwc.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Femdom/Heterosexual/Nudity/Slavery/Large Breasts/Tsundere/Bullying/Female Protagonist/Male Protagonist/Shounen/School\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
+      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Femdom/Nudity/Heterosexual/Slavery/Large Breasts/Tsundere/Bullying/Female Protagonist/Male Protagonist/Shounen/School\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
     },
     {
       "id": "tt35346400",
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "Lycoris Recoil -Friends are thieves of time.-",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-NvVrmMxnDatB.jpg",
-      "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Restaurant/Kuudere/Primarily Female Cast/Episodic/Urban/Work/Female Protagonist/LGBTQ+ Themes/Yuri\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+      "description": "Genres: Action, Comedy, Slice of Life\nTags:Cute Girls Doing Cute Things/Episodic/Restaurant/Primarily Female Cast/Kuudere/Work/Urban/Female Protagonist/Guns/Yuri/LGBTQ+ Themes\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
     },
     {
       "id": "tt35636155",
@@ -187,7 +187,7 @@
       "type": "series",
       "name": "Once Upon a Witch's Death",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
-      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Witch/Primarily Female Cast/Curses/Magic/Urban Fantasy/Foreign/LGBTQ+ Themes/Yuri/Environmental/Episodic/Bisexual\nOn Meg’s seventeenth birthday, she learns that she only has one year left to live. Her mentor—the Eternal Witch, Faust—explains that she is cursed and the only way to save herself is to grow a seed of life using one thousand tears of joy. Of course, such tears aren’t easy to come by. As Meg begins her quest, she finds herself drawn into the lives of her friends and neighbors in ways she never imagined. By sharing their burdens and using her magic to comfort them, she learns how precious those moments of connection can be even in the face of death.<br>\n<br>\n(Source: Yen Press) "
+      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Witch/Primarily Female Cast/Curses/Magic/Urban Fantasy/LGBTQ+ Themes/Foreign/Yuri/Bisexual/Episodic/Environmental\nOn Meg’s seventeenth birthday, she learns that she only has one year left to live. Her mentor—the Eternal Witch, Faust—explains that she is cursed and the only way to save herself is to grow a seed of life using one thousand tears of joy. Of course, such tears aren’t easy to come by. As Meg begins her quest, she finds herself drawn into the lives of her friends and neighbors in ways she never imagined. By sharing their burdens and using her magic to comfort them, she learns how precious those moments of connection can be even in the face of death.<br>\n<br>\n(Source: Yen Press) "
     },
     {
       "id": "tt35437319",
